--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -9,7 +9,26 @@ body {
     font-family: 'Inter';
     font-weight: 400;
 }
-
+body {
+    font-family: 'Noto Sans JP', 'Helvetica Neue', Arial, 'Hiragino Kaku Gothic ProN', 'Hiragino Sans', Meiryo,
+        sans-serif;
+    background-color: #ffffff;
+    background-image: url(/assets/images/index/bg_wave.jpg);
+    background-size: 110% 100%;
+    animation: AnimateBG 15s linear infinite;
+    background-attachment: fixed;
+}
+@keyframes AnimateBG {
+    0% {
+        background-position: 0% 0%;
+    }
+    50% {
+        background-position: 100% 0%;
+    }
+    100% {
+        background-position: 0% 0%;
+    }
+}
 @media (max-width: 1280px) {
     html {
         font-size: 9.5px;
