--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -116,6 +116,28 @@ body {
     -webkit-text-fill-color: transparent;
 }
 
+.text-gradient-white {
+    background: linear-gradient(
+        135deg,
+        #e5e2de 2.19%,
+        #d6d4d1 5.77%,
+        #afb0ae 12.04%,
+        #717576 20.99%,
+        #4c5355 25.46%,
+        #8e9293 35.31%,
+        #bec0c1 43.36%,
+        #dcdcdd 49.63%,
+        #e7e7e7 53.21%,
+        #dddede 58.58%,
+        #c3c5c8 68.42%,
+        #999ea2 80.06%,
+        #969ba0 80.95%,
+        #b0b0b1 91.69%
+    );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
 .clearfix::after {
     content: '';
     display: table;
@@ -133,4 +155,26 @@ body {
 
 .right-0 {
     right: 0rem !important;
+}
+
+.bgrd-product-info-1 {
+    background: linear-gradient(
+        103.97deg,
+        #004cbe -73.12%,
+        #a854d0 87.84%,
+        #8dc8d9 204.9%,
+        #0098b2 253.67%,
+        #438ba1 370.73%,
+        #00808d 414.63%
+    ) !important;
+}
+
+.bgrd-product-info-2 {
+    background: linear-gradient(152.72deg, #000000 0.93%, #3e3a39 120.68%);
+}
+.bgrd-product-info-3 {
+    background: linear-gradient(152.72deg, #000000 0.93%, #3e3a39 120.68%);
+}
+.bgrd-product-info-4 {
+    background: linear-gradient(90deg, #bdbdbd 0%, #f7f4f4 100%);
 }
